# llms-from-papers

./: README.md  pyproject.toml
01-text_encoders/: work_using_text.ipynb
02-coding_attention/: attention.ipynb
03-gpt-model/: gpt_model.ipynb
04-implement_training_loop/: finetuning_gpt_classifier.ipynb  gpt2_training.ipynb  import_gpt2_pretrained.ipynb
data/models/gpt2/: gpt2_124M.pth
src/llm_from_papers/datasets/: __init__.py
src/llm_from_papers/models/: __init__.py  attention.py  gpt.py  utils.py
src/llm_from_papers/utils/: __init__.py  sampling.py
