[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Experiments in building large language models from scratch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mermaid-py>=0.8.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
