[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Experiments in building large language models from scratch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "mermaid-py>=0.8.0",
    "pandas>=2.3.2",
    "tensorflow>=2.20.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "ruff>=0.13.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["llm_from_papers"]
module-root = "src"
